--- a/overrideProperties/config/swf.properties
+++ b/overrideProperties/config/swf.properties
@@ -1,11 +1,10 @@
 swf.load.complete.config.tables.if.count.less.than=500
-swf.user.password.encrypted=false
+swf.user.password.encrypted=true
 swf.plugins.background.core.workers.numThreads=2
 swf.application.authentication.required=false
 
 
 
-swf.host=localhost
 
 swf.jdbc.driver=org.h2.Driver
 swf.jdbc.url=jdbc:h2:./database/opencatalog;AUTO_SERVER=TRUE;
@@ -26,3 +25,11 @@ swf.jdbc.set.dbschema.command=set schema public
 
 swf.api.keys.case=SNAKE
 swf.api.root.required=false
+
+
+
+swf.host=app.succinct.in
+swf.external.port=443
+swf.external.scheme=https
+swf.GOOGLE.client.id=235537659200-jkto5fnougf7mdtcuak6fhtle513qbsg.apps.googleusercontent.com
+swf.GOOGLE.client.secret=UWlZVzR4cjzs0S7ehielS8Sz
